--- a/PageStyles/login/split.css
+++ b/PageStyles/login/split.css
@@ -1,7 +1,7 @@
 :root {
   --container-bg-color: #333;
-  --left-bg-color: rgba(237, 227, 227, 0.7);
-  --right-bg-color: rgba(43, 43, 43, 0.8);
+  --left-bg-color: rgba(66, 65, 65, 0.7);
+  --right-bg-color: rgba(88, 86, 86, 0.7);
   --hover-width: 75%;
   --other-width: 25%;
   --speed: 1000ms;
@@ -18,8 +18,8 @@ body {
 }
 
 h1 {
-  font-size: 4rem;
-  color: #fff;
+  color:rgb(255, 255, 255);
+  font-size: 2.7rem;
   position: absolute;
   left: 50%;
   top: 20%;
@@ -115,7 +115,7 @@ h1 {
   text-align: center;
   font-size: 1rem;
   text-decoration: none;
-  transform: translateX(-50%);
+  transform: translateX(-70%);
 }
 
 .rightsignup {
@@ -127,7 +127,7 @@ h1 {
   text-align: center;
   font-size: 1rem;
   text-decoration: none;
-  transform: translateX(-50%);
+  transform: translateX(-65%);
 }
 
 * {
@@ -145,13 +145,13 @@ h1 {
   border-radius: 10px;
   align-items: center;
   justify-content: center;
-  backdrop-filter: blur5px;
-  background: rgba(255, 255, 255, 0.1);
-  /* add a black border */
-  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.1); /* add a black border */
+  border: 3px solid rgba(0, 0, 0, 0.5);
+  border-right: 3px solid rgb(0, 0, 0);
+  border-bottom: 3px solid rgb(0, 0, 0);
+  background: rgba(255, 255, 255, 0.1); /* filled background for boxes */
+  backdrop-filter: blur(5px);
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1); 
 }
 
 .form {
@@ -175,11 +175,11 @@ h1 {
   height: 4px;
   content: "";
   bottom: -10px;
-  background: rgb(16, 5, 5);
+  background: rgb(255, 255, 255);
   position: absolute;
 }
 .form h3 {
-  color: #000000;
+  color: #e6e3d9;
   font-size: 15px;
   font-weight: 600;
   position: relative;
@@ -204,12 +204,13 @@ h1 {
   font-size: 16px;
   padding: 10px 20px;
   letter-spacing: 1px;
-  border-radius: 35px;
+  border-radius: 15px;
   background: rgba(255, 255, 255, 0.2);
   border: 1px solid rgba(255, 255, 255, 0.5);
   box-shadow: 0 5px 15px rgba(35, 193, 75, 0.05);
   border-right: 1px solid rgba(255, 255, 255, 0.2);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  position: relative;
 }
 
 .form .input__box input::placeholder {
@@ -224,10 +225,12 @@ h1 {
   font-weight: 600;
   margin-bottom: 20px;
 }
+
 .forget {
   color: rgb(0, 0, 0);
   margin-top: 5px;
 }
+
 .forget a {
   color: rgb(33, 32, 32);
   font-weight: 600;
