--- a/PageStyles/login/forgot.css
+++ b/PageStyles/login/forgot.css
@@ -1,203 +1,46 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  background-color: rgb(225, 234, 183);
 }
-body {
-  overflow: hidden;
-}
-.container1 {
-  width: 410px;  /* changed from 400 */
-  display: flex;
-  min-height: 400px;
-  position: relative;
-  border-radius: 10px;
-  align-items: center;
-  justify-content: center;
-  backdrop-filter: blur5px;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 25px 45px rgba(225, 235, 225, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-section {
-  display: flex;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(to bottom, #aeaee7, #3275a8);
-}
-section .color:nth-child(1) {
-  top: -350px;
-  width: 600px;
-  height: 600px;
-  background: #23238b;
-}
-section .color:nth-child(2) {
-  left: 100px;
-  width: 500px;
-  height: 500px;
-  bottom: -150px;
-  background: #6ac5e4de;
-}
-section .color:nth-child(3) {
-  right: 100px;
-  bottom: 50px;
-  width: 300px;
-  height: 300px;
-  background: #cc99eb;
-}
-.box {
-  position: relative;
-}
-.box .π {
-  position: absolute;
-  border-radius: 10px;
-  backdrop-filter: blur(5px);
-  background: rgba(199, 37, 145, 0.1);
-  animation-delay: calc(-1s * var(--i));
-  animation: animate 8s linear infinite;
-  box-shadow: 0 25px 45px rgba(207, 139, 139, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-@keyframes animate {
-  0%,
-  100% {
-      transform: translateY(-40px);
-  }
-  50% {
-      transform: translateY(40px);
-  }
-}
-.box .π:nth-child(1) {
-  background: url("design.png"); /* adding a pi picture  */
-  background-size: cover;
-  background-position: center;
-  border: none; /* take the box border off the image  */
-  top: -50px;
-  left: -60px;
-  width: 40px;
-  height: 40px;
-}
-.box .π:nth-child(2) {
-  background: url("design.png"); /* adding a pi picture  */
-  background-size: cover;
-  background-position: center;
-  border: none; /* take the box border off the image  */
-  size: 100px;
-  z-index: 2;
-  top: 150px;
-  left: -100px;
-  width: 60px;
-  height: 60px;
-}
-.box .π:nth-child(3) {
-  background: url("design.png"); /* adding a pi picture  */
-  background-size: cover;
-  background-position: center;
-  border: none; /* take the box border off the image  */
-  z-index: 2;
-  width: 80px;
-  height: 80px;
-  right: -50px;
-  bottom: -60px;
-}
-.box .π:nth-child(4) {
-  background: url("design.png"); /* adding a pi picture  */
-  background-size: cover;
-  background-position: center;
-  border: none; /* take the box border off the image  */
-  left: 100px;
-  width: 50px;
-  height: 50px;
-  bottom: -80px;
-}
-.box .π:nth-child(5) {
-  background: url("design.png"); /* adding a pi picture  */
-  background-size: cover;
-  background-position: center;
-  border: none; /* take the box border off the image  */
-  top: -80px;
-  left: 140px;
-  width: 60px;
-  height: 60px;
-}
-.form {
-  width: 100%;
-  height: 100%;
-  padding: 40px;
-  position: relative;
-}
-.form h2 {
-  color: rgb(255, 255, 255);
-  text-align: center;
-  font-size: 35px;
-  font-weight: 600;
-  position: relative;
-  letter-spacing: 1px;
-  margin-bottom: 40px;
-}
-.form h2::before {
-  left: 0;
-  width: 80px;
-  height: 4px;
-  content: "";
-  bottom: -10px;
-  background: rgb(16, 5, 5);
-  position: absolute;
-}
-.form h3 {
-  color: #000000;
-  font-size: 18px;
-  font-weight: 600;
-  position: relative;
-  letter-spacing: 1px;
-  margin-bottom: 40px;
-}
-.form h2::before {
-  height: 0px; 
-}
-.form .input__box {
-  width: 100%;
-  margin-top: 20px;
-}
-.form .input__box input {
-  width: 100%;
-  color: rgb(255, 255, 255);
-  border: none;
-  outline: none;
-  font-size: 16px;
-  padding: 10px 20px;
-  letter-spacing: 1px;
-  border-radius: 35px;
-  background: rgba(255, 255, 255, 0.2);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  box-shadow: 0 5px 15px rgba(35, 193, 75, 0.05);
-  border-right: 1px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-.form .input__box input::placeholder {
-  color: rgb(0, 0, 0);
-}
-.form .input__box input[type="submit"] {
-  color: rgb(0, 0, 0);
-  cursor: pointer;
-  background: #fff;
-  max-width: 100px;
-  font-weight: 600;
-  margin-bottom: 20px;
-}
-.forget {
-  color: rgb(0, 0, 0);
-  margin-top: 5px;
-}
-.forget a {
-  color: rgb(33, 32, 32);
-  font-weight: 600;
-  text-decoration: none;
-} 
 
+h1 {
+  color: rgb(0, 0, 0);
+  font-size: 2.7rem;
+}
+
+p1 {
+  color: rgb(0, 0, 0);
+  font-size: 1.3rem;
+}
+
+input[type="email"] {
+  margin-top: 1.5rem;
+  top: 0.8rem;
+  width: 35%;
+  height: 1.6rem;
+  border: 1.3px solid rgb(0, 0, 0);
+  border-radius: 0.5rem;
+  font-size: 1rem;
+}
+
+button[type="submit"] {
+  height: 1.6rem;
+  border: 1.3px solid rgb(0, 0, 0);
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  background-color: rgb(230, 226, 249);
+  color: rgb(0, 0, 0);
+  position: relative;
+  top: 0.5rem;
+  font-size: medium;
+}
+
+a {
+  color: rgb(14, 49, 106);
+  font-size: 1.1rem;
+}
+
+p{
+  margin-top: 1.2rem;
+  color: rgb(0, 0, 0);
+  font-size: 1.1rem;
+}
