--- a/ReactDev/pekan-pi-front/src/Pages/split.css
+++ b/ReactDev/pekan-pi-front/src/Pages/split.css
@@ -1,12 +1,10 @@
 :root {
-  --color: rgba(152, 149, 149, 0.519); /* variable for login and sign up box background */
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  --color: rgba(
+    152,
+    149,
+    149,
+    0.519
+  ); /* variable for login and sign up box background */
 }
 
 /**styles*/
@@ -14,13 +12,14 @@
   height: 100vh;
   width: 100%;
   display: flex;
-
+  font-family: "Poppins", sans-serif;
   justify-content: space-around;
   align-items: center;
 }
 
-.box {
-  height: 530px;
+.boxL {
+  margin: 10px;
+  height: 500px;
   padding: 30px;
   background: rgba(255, 255, 255, 0.1);
   border: 3px solid rgba(0, 0, 0, 0.5);
@@ -58,7 +57,7 @@
   background-size: cover;
 }
 
-.box form {
+.boxL form {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -70,7 +69,7 @@
   color: rgb(255, 255, 255);
 }
 
-.box form input {
+.boxL form input {
   color: rgb(255, 255, 255);
   border: none;
   outline: none;
@@ -87,20 +86,20 @@
   margin: 15px;
 }
 
-.box form input::placeholder {
+.boxL form input::placeholder {
   color: rgb(255, 255, 255);
 }
 
-.box h1,
-.box p,
-.box h2 {
+.boxL h1,
+.boxL p,
+.boxL h2 {
   text-align: center;
   margin: 10px;
   padding: 10px;
   color: rgb(255, 255, 255);
 }
 
-.title {
+.titleL {
   font-size: 2.5rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -119,7 +118,7 @@ p.forget {
   font-family: "Poppins", sans-serif;
 }
 
-h2.header2 {
+h2.header2L {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.7rem;
@@ -156,11 +155,11 @@ h2.header2 {
   text-align: center;
 }
 
-.box .button {
+.boxL .buttonL {
   width: 170px;
 }
 
-.box .button:hover {
+.boxL .buttonL:hover {
   background: #fff;
   color: #000;
   border: 1px solid #fff;
@@ -179,13 +178,13 @@ h2.header2 {
   .left-section:hover {
     width: 100%;
   }
-  .box {
+  .boxL {
     width: 60%;
   }
-  h2.header2 {
+  h2.header2L {
     font-size: 1.54rem;
   }
-  .box form input {
+  .boxL form input {
     width: 16rem;
   }
 }
@@ -199,13 +198,13 @@ h2.header2 {
   .left-section:hover {
     width: 100%;
   }
-  .box {
+  .boxL {
     width: 90%;
   }
-  h2.header2 {
+  h2.header2L {
     font-size: 1.1rem;
   }
-  .box form input {
+  .boxL form input {
     width: 16rem;
   }
 }
