--- a/ReactDev/pekan-pi-front/src/index.css
+++ b/ReactDev/pekan-pi-front/src/index.css
@@ -31,29 +31,29 @@ code {
 } */
 
 /* style the links in the nav bar */
-/* .navbar a {
-  color: white;
+.navbar a {
+  color: #555;
   text-decoration: none;
   font-size: 1.2rem;
   padding: 0.5rem 1rem;
   border-radius: 5px;
-} */
+}
 
 /* style the active link */
-/* .navbar a.active {
+.navbar a.active {
   background-color: rgba(255, 255, 255, 0.2);
-} */
+}
 
 /* style the links on hover */
-/* .navbar a:hover {
+.navbar a:hover {
   background-color: rgba(255, 255, 255, 0.2);
-} */
+}
 
 /* style the logo */
-/* .navbar .logo {
+.navbar .logo {
   font-size: 1.5rem;
   font-weight: bold;
-} */
+}
 
 /* 
 {
