--- a/ReactDev/pekan-pi-front/src/index.css
+++ b/ReactDev/pekan-pi-front/src/index.css
@@ -12,36 +12,6 @@ code {
     monospace;
 }
 
-/* light and dark mode toggle */
- .toggle {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 1rem;
-  width: 3rem;
-  height: 1.5rem;
-  border-radius: 1.5rem;
-  background: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  transition: all 0.3s ease;
-} 
-
- .toggle:hover {
-  background: #f5f5f5;
-} 
-
- .toggle span {
-  display: block;
-  width: 30px;
-  height: 2px;
-  margin: 5px auto;
-  background: #333;
-  transition: all 0.3s ease;
-} 
-
-
-
 /******toggle styles*****/
 .switch {
   position: relative;
@@ -75,17 +45,13 @@ code {
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   -webkit-transition: .4s;
   transition: .4s;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  background-color: #21f391;
 }
 
 input:checked + .slider:before {
