--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -1,4 +1,5 @@
 /* only make background color yellow to the home page */
+@import url(https://fonts.cdnfonts.com/css/scope-one); /* scope one font for navbar*/
 
 .Home {
   background-color: #e3eca4;
@@ -33,6 +34,9 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color:inherit;
+  font-size: 25px;
+  font-family: 'Scope One';
+  font-weight: 'bold';
 }
 
 p {
