Just messing around with the login page

--- a/ReactDev/pekan-pi-front/src/Pages/split.css
+++ b/ReactDev/pekan-pi-front/src/Pages/split.css
@@ -48,12 +48,14 @@
 }
 
 .right-section {
-  background: url("../Images/pekan-dark.jpg") center center no-repeat;
+  /* background: url("../Images/pekan-dark.jpg") center center no-repeat; */
+  background: url("../Images/foodNew.jpg") center center no-repeat;
   background-size: cover;
 }
 
 .left-section {
-  background: url("../Images/food-dark.jpg") center center no-repeat;
+  /* background: url("../Images/food-dark.jpg") center center no-repeat; */
+  background: url("../Images/pekanNew.jpg") center center no-repeat;
   background-size: cover;
 }
 
