--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -249,3 +249,26 @@ table {
 .darkmode-page{
   background-color:  rgb(113, 111, 111);
 }
+.darkmode-nav ul li a {
+  color: rgb(255, 255, 255);
+}
+/* make headers white when dark-mode*/
+.darkmode-page p {
+  color: white;
+}
+.darkmode-page h1 {
+  color: white;
+}
+.darkmode-page h2 {
+  color: white;
+}
+.darkmode-page h4 {
+  color: white;
+}
+/* makes pictures on navbar turn white and blue */
+.darkmode-navbar img {  
+  filter: invert(100%);
+}
+
+
+
