--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -186,38 +186,49 @@ small {
   display: none;
 }
 /*------------ media query for menu*/
-@media only screen and (max-width: 800px) {
-  nav ul {
-    position: absolute;
-    top: 165px;
-    left: 0;
+@media only screen and (max-width: 1000px) {
+  .menu-icon {
+    display: block;
+  }
+
+  nav {
+    position: fixed;
     width: 100%;
-    overflow: hidden;
-    transition: max-height 0.5s;
+    background: #fff;
+    height: 100vh;
+    top: 0;
+    right: -100%;
+    text-align: left;
+    transition: all 0.5s;
+  }
+  nav ul {
+    display: block;
+    margin: 50px 20px;
   }
   nav ul li {
     display: block;
-    margin-right: 50px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 20px 0;
   }
   nav ul li a {
-    color: #ff523b;
+    font-size: 20px;
   }
   .menu-icon {
-    display: block;
-    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 80px;
+  } 
+  .navbar.active .menu-icon:hover {
+    transform: rotate(180deg);
   }
-}
-/* media query for less than 600 screen size */
-@media only screen and (max-width: 600px) {
-  .row {
-    text-align: center;
+  .navbar.active .menu-icon::before {
+    color: #ff523b;
   }
-  .col-2,
-  .col-3,
-  .col-4 {
+
+
+  .col-2 {
     flex-basis: 100%;
+    text-align: center;
+    margin-bottom: 50px;
   }
 }
 
