--- a/ReactDev/pekan-pi-front/src/index.css
+++ b/ReactDev/pekan-pi-front/src/index.css
@@ -1,4 +1,5 @@
 body {
+  height:100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -6,7 +7,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#root{
+  height:100%;
+}
+.react-app{
+  height:100%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
