Can add dynamically gotten ingredients from spoonacular to individual's pantry

--- a/ReactDev/pekan-pi-front/src/Pages/pantrySearch.css
+++ b/ReactDev/pekan-pi-front/src/Pages/pantrySearch.css
@@ -25,6 +25,10 @@
     background: url("../Images/searchIcon.png") center center no-repeat;
     background-color: rgba(249, 76, 23, 0.94);
   }
+
+  .searchIcon:hover {
+    background-color: rgba(89, 142, 255, 0.94);
+  }
   
   input:focus {
     outline: none;
@@ -54,6 +58,10 @@
     display: flex;
     align-items: center;
     color: black;
+  }
+
+  .dataResult .dataItem:hover{
+    background-color: rgb(151, 248, 255);
   }
   
   .dataItem p {
