fixed navbar hover problem

--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -38,6 +38,12 @@ nav .ul-menu li a {
   font-family: 'Scope One';
   font-weight: 'bold';
 }
+
+nav .ul-menu li a:hover {
+  color: #3dc6d3;
+  background: none;
+}
+
 /* hovering over images turn different color */
 /* .whisk img:hover, .logo img:hover, .pot :hover  */
 .logo img:hover{
@@ -288,6 +294,11 @@ table {
 }
 .darkmode-nav .ul-menu li a {
   color: #3dc6d3;
+}
+
+.darkmode-nav .ul-menu li a:hover {
+  color: red;
+  background: none;
 }
 /* make headers white when dark-mode*/
 .darkmode-page p {
