Fixed margins for navbar relative to recipes page

--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -14,7 +14,7 @@ body {
 .navbar {
   display: flex;
   align-items: center;
-  padding: 20px;
+  /* padding: 20px; */
 }
 nav {
   flex: 1;
@@ -29,7 +29,7 @@ nav .ul-menu {
 }
 nav .ul-menu li {
   display: inline-block;
-  margin-right: 50px;
+  margin-right: 25px;
 }
 nav .ul-menu li a {
   text-decoration: none;
