--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -1,5 +1,6 @@
 /* only make background color yellow to the home page */
 @import url(https://fonts.cdnfonts.com/css/scope-one); /* scope one font for navbar*/
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Playfair+Display:ital,wght@0,400;1,500&family=Source+Sans+Pro:ital,wght@0,300;1,300&display=swap");
 
 .Home {
   background-color: #e3eca4;
@@ -101,6 +102,30 @@ p {
 }
 .btn:hover {
   background: #563434;
+}
+.btn2 {
+  display: inline-block;
+  background: rgb(56, 187, 146);
+  color: #fff;
+  padding: 9px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+  transition: background 0.5s;
+}
+.btn2:hover {
+  background: #2c1f83;
+}
+.btn3 {
+  display: inline-block;
+  background: rgb(218, 164, 62);
+  color: #fff;
+  padding: 9px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+  transition: background 0.5s;
+}
+.btn3:hover {
+  background: #69322b;
 }
 .header .row {
   margin-top: 70px;
@@ -334,10 +359,11 @@ table {
   margin-left: 20px;
   margin-right: 20px;
   color: #ff523b;
+  font: "Playfair Display";
 }
 .main-heading2 {
   /* color: #555; */
-  font-size: 17px;
+  font-size: 16px;
   color: rgb(44, 5, 92);
 }
 .col-5 {
@@ -368,4 +394,14 @@ table {
   /* padding-left: 80px; */
   font-size: 1.2rem;
   color: teal;
+  font-family: "Source Sans Pro", sans-serif;
+}
+.tabs-quote {
+  color: #2c1f83;
+  font-family: "Playfair Display", serif;
+  font-size: 20px;
+}
+.tabs-quote2 {
+  color: #2c1f83;
+  font-family: "Playfair Display", serif;
 }
