--- a/ReactDev/pekan-pi-front/src/Pages/Pantry.css
+++ b/ReactDev/pekan-pi-front/src/Pages/Pantry.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 .Pantry {
   width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
-  font-family: "Nunito", sans-serif;
+  /* font-family: "Nunito", sans-serif; */
+  font-family: "Playfair Display", serif;
 }
 
 body {
