--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -1,5 +1,5 @@
 /* only make background color yellow to the home page */
-@import url(https://fonts.cdnfonts.com/css/scope-one); /* scope one font for navbar*/
+@import url("https://fonts.cdnfonts.com/css/scope-one"); /* scope one font for navbar*/
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Playfair+Display:ital,wght@0,400;1,500&family=Source+Sans+Pro:ital,wght@0,300;1,300&display=swap");
 
 .Home {
@@ -54,7 +54,7 @@ nav .ul-menu li div a:hover {
 /* hovering over images turn different color */
 .whisk img:hover,
 .logo img:hover,
-.about-img: hover,
+.about-img:hover,
 .pot :hover {
   filter: invert(100%);
   background: none;
