Fixed recipe page
Fixed recipe page darkmode
Fixed centering of cards
Change button sizes
Changed # of cards to 9
Added functionality to Learn More button

--- a/ReactDev/pekan-pi-front/src/home.css
+++ b/ReactDev/pekan-pi-front/src/home.css
@@ -366,6 +366,10 @@ table {
 .darkmode-page h4 {
   color: white;
 }
+
+.darkmode-page .recipe-card p {
+  color:rgb(80, 80, 80);
+}
 /* makes pictures on navbar turn blue */
 .darkmode-navbar .logo img {
   filter: invert(100%);
